The Task is finished #2 adding files

--- a/src/main/resources/templates/image.html
+++ b/src/main/resources/templates/image.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Showing Images</title>
+    <title>Displaying_images</title>
 </head>
 <body>
-<a th:href="@{/show}">Displaying the images</a>
+<h1>Displaying images on the Screen  </h1>
+<a th:href="@{/show}"> <<- Add New User </a>
 </body>
 </html>
